--- a/index.html
+++ b/index.html
@@ -5,3 +5,17 @@ layout: soon
 <div class="logo">
 
 </div>
+
+
+<div class="about-wrapper">
+  <h3>About us</h3>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente dolor, molestias totam blanditiis, nulla autem dignissimos pariatur rem voluptatum alias incidunt soluta consectetur quas iure, necessitatibus aut minus laborum veniam. Dolorem inventore provident eligendi qui nulla perferendis dolorum, repudiandae quo nisi minima cumque tenetur, necessitatibus ipsum deleniti dolor modi facilis est. Repellendus molestias debitis dicta tenetur, enim laudantium expedita tempora adipisci? Inventore, harum voluptate accusamus reprehenderit recusandae expedita ab cumque rem rerum eum, dicta tempore repellat! Natus ut facilis dolore tempore sed voluptatum, nostrum quia. Voluptatem incidunt doloribus, ex iure, cum fugiat hic ab reprehenderit soluta blanditiis similique magni praesentium?</p>
+
+</div>
+
+
+<div class="why-wrapper">
+  <h3>Why</h3>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi laudantium cum inventore quisquam similique ut sint ipsa mollitia non maxime. Minima magnam iste id sunt fugit dolores ipsam, pariatur, laudantium consequatur modi saepe! Labore quos laborum aliquam incidunt cum, reprehenderit, fugit obcaecati quis provident atque dignissimos excepturi tempore pariatur inventore!
+</div>
