--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@ layout: soon
 
 <div class="why-wrapper">
   <h3>Why</h3>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi laudantium cum inventore quisquam similique ut sint ipsa mollitia non maxime. Minima magnam iste id sunt fugit dolores ipsam, pariatur, laudantium consequatur modi saepe! Labore quos laborum aliquam incidunt cum, reprehenderit, fugit obcaecati quis provident atque dignissimos excepturi tempore pariatur inventore!
+  <p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi laudantium cum inventore quisquam similique ut sint ipsa mollitia non maxime. Minima magnam iste id sunt fugit dolores ipsam, pariatur, laudantium consequatur modi saepe! Labore quos laborum aliquam incidunt cum, reprehenderit, fugit obcaecati quis provident atque dignissimos excepturi tempore pariatur inventore!</p>
 </div>
